Add VesselService + implementation